--- a/inst/03_metagenres.qmd
+++ b/inst/03_metagenres.qmd
@@ -43,17 +43,25 @@ devtools::load_all()
 
 # Algorithm for folding the genre tree to get metagenres
 <!-- TODO: Add a little explanation on the algorithm (see Bayreuth slides) -->
+Root of the tree is "other" genre. This is why it does not need to fulfill the minimum song count requirement. 
 
+We need to ensure that when merging genres, we merge all siblings and all grandchildren of the parent genre to avoid dangling nodes in the tree. Due to how the trees are created, merging grand children that already fulfilled the min n requirement will not occur often (genres that are closer to the root are expected to appear more frequent in initial genres than genres further away from the root).
+
+<!-- Eigentlich müsste es sogar so sein, das,,s der bei unterschreiten der Pfad mit der kleineren Summe eingeklappt wird, oder? -->
+
+The algorithm works as follows:
 ```{mermaid folding_algorithm}
 flowchart TD
     A["Start with initial music genres and hierarchy tree"] --> B["Try different minimum song counts (grid search)"]
     B --> C["For each minimum count: Start folding process"]
     C --> D["Find leaf genre with most songs at deepest level"]
     D --> E{"Does this genre have enough songs?"}
-    E -->|Yes| F{"Would parent + siblings have enough songs combined?"}
-    E -->|No| G["Merge genre with parent and all siblings"]
-    F -->|Yes| H["Remove genre from tree (fold upward)"]
-    F -->|No| G
+    E -->|Yes| F{"Is the parent genre the root of the tree?"}
+    E -->|No| G["Merge genre with parent and all siblings and all grandchildren of parent"]
+    F -->|No| FF{"Would parent + siblings have enough songs combined?"}
+    FF --> |Yes| H["Pluck genre from tree (cut connection to parent)"]
+    FF -->|No| G
+    F -->|Yes| H
     G --> I["Update song counts and mark genres as processed"]
     H --> I
     I --> J{"Are we at the root level?"}
@@ -92,7 +100,17 @@ mb_gini_plot
 Within-hierarchy-level uniformity of distribution (weighted Gini coefficient, [0-1]) for different minimum song per genre counts when folding the MusicBrainz genre tree. Calculated for a minimum n tracks per genre of `r format(mb_tuning_metadata$min_min_n, big.mark = ",")` to `r format(mb_tuning_metadata$max_min_n, big.mark = ",")`. Resulting number of metagenres ranged from `r mb_tuning_metadata$min_n_metagenre` to `r mb_tuning_metadata$max_n_metagenre`.
 :::
 
-
+:::{.column-screen-inset-right}
+:::{.plot-container}
+```{r network_plot_mb}
+plot_network_graph(graph = mb_suggested_solution$metagenre_graph, 
+                   mapping = mb_suggested_solution$mapping, 
+                   sizemode = "metagenre", 
+                   height = 1000, 
+                   interactive = TRUE)
+```	
+:::
+:::
 
 ## Discogs Metagenres
 :::{#fig-discogs-gini}
@@ -102,6 +120,17 @@ dc_gini_plot
 Within-hierarchy-level uniformity of distribution (weighted Gini coefficient, [0-1]) for different minimum song per genre counts when folding the Discogs genre tree. Calculated for a minimum n tracks per genre of `r format(dc_tuning_metadata$min_min_n, big.mark = ",")` to `r format(dc_tuning_metadata$max_min_n, big.mark = ",")`. Resulting number of metagenres ranged from `r dc_tuning_metadata$min_n_metagenre` to `r dc_tuning_metadata$max_n_metagenre`.
 :::
 
+:::{.column-screen-inset-right}
+:::{.plot-container}
+```{r net_dc}
+plot_network_graph(graph = dc_suggested_solution$metagenre_graph, 
+                   mapping = dc_suggested_solution$mapping, 
+                   sizemode = "metagenre", 
+                   height = 1000, 
+                   interactive = TRUE)
+```	
+:::
+:::
 
 ## Spotify Metagenres
 :::{#fig-spotify-gini}
