--- a/inst/01_data_report.qmd
+++ b/inst/01_data_report.qmd
@@ -27,6 +27,7 @@ format:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 devtools::load_all()
+settings <- readRDS("../data/settings_data_prep.rds")
 ```	
 
 ```{r load_poptrag}
@@ -52,7 +53,7 @@ We ground our analysis on a dataset with `r format(n_poptrag, big.mark = ",")` t
 The dataset excluded songs shorter than 30 seconds (most likely interludes; 853 tracks in the sources). Additionally, only distinct combinations of track titles and principal artist names were permitted, while earlier release dates were preferred.
 :::
 
-# Extracting genre tags
+# Extracting valid genre tags
 ## MusicBrainz network data
 
 ```{r musibrainz_genres}
@@ -72,15 +73,28 @@ votes_per_track_mb <- mb_long |>
 tracks_per_tag_mb <- dplyr::count(mb_long, tag_name) |> dplyr::pull(n)
 one_track_tags_mb <- dplyr::filter(dplyr::count(mb_long, tag_name), n == 1) |>
   nrow()
+artists_per_tag_mb <- mb_long |>
+  dplyr::distinct(tag_name, n_artists) |> 
+  dplyr::pull(n_artists)
 ```
 
-We filtered out all songs without a genre tag and songs with only non-music genre or tags that were not on the [Musicbrainz genre whitelist](https://musicbrainz.org/genres) on June 16, 2025 (`r format(n_diff_mb, big.mark = ",")` tracks, `r round(n_diff_mb / n_poptrag * 100)`%). Non-music genre tags were: `r paste(sprintf('"%s"', mb_non_music_tags), collapse = ", ")`.
+We filtered out all songs without a genre tag and songs with only non-music genre or tags that were not on the [Musicbrainz genre whitelist](https://musicbrainz.org/genres) on June 16, 2025. Additionally, we excluded tags that did not occur with at least `r settings$n_artists_threshold` artists, as these do not classify for a genre (as no community can be assumed for these tags). This way we removed `r format(n_diff_mb, big.mark = ",")` tracks from the data set (`r round(n_diff_mb / n_poptrag * 100)`%). Non-music genre tags were: `r paste(sprintf('"%s"', mb_non_music_tags), collapse = ", ")`.
 
 This amounts to **N~MusicBrainz~ = `r format(n_mb, big.mark = ",")` tracks** with MusicBrainz music genre tags.
 
-There are `r format(n_unique_mb_tags, big.mark = ",")` different genre tags in the MusicBrainz genre data set. Users assigned between `r min(tags_per_track_mb)` and `r max(tags_per_track_mb)` different tags to each track (median: `r median(tags_per_track_mb)`, IQR: `r IQR(tags_per_track_mb)`) and voted for each track between `r min(votes_per_track_mb)` and `r max(votes_per_track_mb)` times (median: `r median(votes_per_track_mb)`, IQR: `r IQR(votes_per_track_mb)`).
+There are **`r format(n_unique_mb_tags, big.mark = ",")` different genre tags** in the MusicBrainz genre data set. Users assigned between `r min(tags_per_track_mb)` and `r max(tags_per_track_mb)` different tags to each track (median: `r median(tags_per_track_mb)`, IQR: `r IQR(tags_per_track_mb)`) and voted for each track between `r min(votes_per_track_mb)` and `r max(votes_per_track_mb)` times (median: `r median(votes_per_track_mb)`, IQR: `r IQR(votes_per_track_mb)`).
 
-`r one_track_tags_mb` tags were assigned to only one track (`r round(one_track_tags_mb / n_unique_mb_tags * 100)`%, min: `r min(tracks_per_tag_mb)`, max: `r format(max(tracks_per_tag_mb), big.mark = ",")`, median: `r median(tracks_per_tag_mb)`, IQR: `r IQR(tracks_per_tag_mb)`).
+Track-based statistics on tag assignement: 
+* min `r min(tracks_per_tag_mb)` tracks per tag
+* max `r format(max(tracks_per_tag_mb), big.mark = ",")` tracks per tag
+* median `r median(tracks_per_tag_mb)` tracks per tag
+* IQR `r IQR(tracks_per_tag_mb)` tracks per tag
+
+Artist-based statistics on tag assignement:
+* min `r min(artists_per_tag_mb)` artists per tag
+* max `r format(max(artists_per_tag_mb), big.mark = ",")` artists per tag
+* median `r median(artists_per_tag_mb)` artists per tag
+* IQR `r IQR(artists_per_tag_mb)` artists per tag
 
 ## Spotify network data
 
@@ -101,15 +115,28 @@ n_multiple_artists <- poptrag |>
   dplyr::filter(track.s.id %in% s_long$track.s.id) |>
   dplyr::filter(n_artists > 1) |>
   nrow() 
+artists_per_tag_s <- s_long |>
+  dplyr::distinct(tag_name, n_artists) |> 
+  dplyr::pull(n_artists)
 ```
 
-We filtered out all songs without a Spotify genre tag (Spotify artist genre tags) or with only non-music genre tags (`r format(n_diff_s, big.mark = ",")` tracks, `r round(n_diff_s / n_poptrag * 100)`%). Non-music genre tags were: `r paste(sprintf('"%s"', s_non_music_tags), collapse = ", ")`.
+We filtered out all songs without a Spotify genre tag (Spotify artist genre tags) or with only non-music genre tags. Additionally, we excluded tags that did not occur with at least `r settings$n_artists_threshold` artists, as these do not classify for a genre (as no community can be assumed for these tags). This way we removed `r format(n_diff_s, big.mark = ",")` tracks from the data set (`r round(n_diff_s / n_poptrag * 100)`%).Non-music genre tags were: `r paste(sprintf('"%s"', s_non_music_tags), collapse = ", ")`.
 
-This amounts to **N~Spotifys~ = `r format(n_s, big.mark = ",")` tracks** with Spotify music genre tags.
+This amounts to **N~Spotify~ = `r format(n_s, big.mark = ",")` tracks** with Spotify music genre tags.
 
-There are `r format(n_unique_s_tags, big.mark = ",")` different genre tags in the Spotify genre data set. Users assigned between `r min(tags_per_track_s)` and `r max(tags_per_track_s)` different tags to each track (median: `r median(tags_per_track_s)`, IQR: `r IQR(tags_per_track_s)`).
+There are **`r format(n_unique_s_tags, big.mark = ",")` different genre tags** in the Spotify genre data set. Users assigned between `r min(tags_per_track_s)` and `r max(tags_per_track_s)` different tags to each track (median: `r median(tags_per_track_s)`, IQR: `r IQR(tags_per_track_s)`).
 
-`r one_track_tags_s` tags were assigned to only one track (`r round(one_track_tags_s / n_unique_s_tags * 100)`%, min: `r min(tracks_per_tag_s)`, max: `r format(max(tracks_per_tag_s), big.mark = ",")`, median: `r median(tracks_per_tag_s)`, IQR: `r IQR(tracks_per_tag_s)`).
+Track-based statistics on tag assignement:  
+* min `r min(tracks_per_tag_s)` tracks per tag
+* max `r format(max(tracks_per_tag_s), big.mark = ",")` tracks per tag
+* median `r median(tracks_per_tag_s)` tracks per tag
+* IQR `r IQR(tracks_per_tag_s)` tracks per tag
+
+Artist-based statistics on tag assignement:
+* min `r min(artists_per_tag_s)` artists per tag
+* max `r format(max(artists_per_tag_s), big.mark = ",")` artists per tag
+* median `r median(artists_per_tag_s)` artists per tag
+* IQR `r IQR(artists_per_tag_s)` artists per tag
 
 :::{.callout-important}
 Spotify genre tags are **assigned to artists, not to tracks**. Therefore, all tracks by the same artist have the same Spotify genre tags.
@@ -117,5 +144,3 @@ Spotify genre tags are **assigned to artists, not to tracks**. Therefore, all tr
 :::{.callout-note}
 In addition to artists being the observational unit, Spotify provides no vote counts for tags on track basis. However, some track feature multiple artists. Thus, we calculated the vote for each track's tags by combining all track artists' tags and counting the number of tag appearences per track. `r format(n_multiple_artists, big.mark = ",")` tracks (`r round(n_multiple_artists / n_s* 100)`%) featured multiple artists.
 :::
-
-# Denoising
